--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
-    "package": "cross-env NODE_ENV=production node -r babel-register package.js",
+    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "init-docs": "gitbook install",
     "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
