--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "bl": "^2.0.0",
     "bufferutil": "^4.0.0",
     "camelcase": "5.0.0",
+    "codemirror": "^5.39.2",
     "component-playground": "^3.1.2",
     "compute-chunkify": "0.0.0",
     "compute-iqr": "^1.1.0",
@@ -229,7 +230,6 @@
     "redux-thunk": "^2.3.0",
     "ripemd160": "^2.0.2",
     "semver": "^5.5.0",
-    "simplemde": "^1.11.2",
     "socket.io-client": "^2.1.0",
     "source-map-support": "^0.5.4",
     "spectacle": "4.3.1",
@@ -237,6 +237,7 @@
     "svg-react-loader": "^0.4.5",
     "turndown": "^4.0.2",
     "turndown-plugin-gfm": "^1.0.2",
+    "typo-js": "^1.0.3",
     "uglify-es": "3.3.9",
     "uniq": "^1.0.1",
     "utf-8-validate": "^5.0.1",
