--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "collectCoverage": true,
     "testURL": "http://localhost/",
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/test/mocks/file_mock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/mocks/file_mock.js",
       "\\.(css|less)$": "<rootDir>/test/mocks/style_mock.js"
     }
   },
@@ -189,6 +188,7 @@
     "json-loader": "^0.5.4",
     "katex": "^0.9.0",
     "kernel-smooth": "^0.2.3",
+    "localforage": "^1.7.2",
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
@@ -241,7 +241,7 @@
     "semver": "^5.5.0",
     "socket.io-client": "^2.1.0",
     "source-map-support": "^0.5.4",
-    "spectacle": "4.3.1",
+    "spectacle": "4.4.0",
     "style-loader": "^0.21.0",
     "svg-react-loader": "^0.4.5",
     "turndown": "^4.0.2",
