Wait for build to finish

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 script:
 - npm run lint
 - npm run test
-- npm run build
+- travis_wait npm run build
 
 after_script:
 - npm run coverage
