--- a/package.json
+++ b/package.json
@@ -252,7 +252,8 @@
     "utf-8-validate": "^5.0.1",
     "venn.js": "0.2.20",
     "victory": "30.2.0",
-    "webpack": "4.16.5"
+    "webpack": "4.16.5",
+    "whatwg-fetch": "^2.0.4"
   },
   "devEngines": {
     "node": "7.x || 8.x || 9.x || 10.x"
