--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "happypack": "^5.0.0",
     "hard-source-webpack-plugin": "^0.12.0",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdom": "^11.10.0",
+    "jsdom": "11.10.0",
     "modclean": "^2.0.0",
     "null-loader": "^0.1.1",
     "react-hot-loader": "^4.3.1",
@@ -171,7 +171,7 @@
     "element-resize-event": "^2.0.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "file-loader": "^1.1.5",
+    "file-loader": "^2.0.0",
     "form-data": "^2.2.0",
     "fs-extra": "^7.0.0",
     "gitbook-plugin-edit-link": "^2.0.2",
@@ -244,7 +244,7 @@
     "spectacle": "5.0.0",
     "style-loader": "^0.22.0",
     "svg-react-loader": "^0.4.5",
-    "turndown": "^4.0.2",
+    "turndown": "^5.0.0",
     "turndown-plugin-gfm": "^1.0.2",
     "typo-js": "^1.0.3",
     "uglify-es": "3.3.9",
@@ -252,7 +252,7 @@
     "utf-8-validate": "^5.0.1",
     "venn.js": "0.2.20",
     "victory": "30.2.0",
-    "webpack": "4.16.5",
+    "webpack": "4.17.0",
     "whatwg-fetch": "^2.0.4"
   },
   "devEngines": {
