Switch to terser

--- a/package.json
+++ b/package.json
@@ -244,10 +244,10 @@
     "spectacle": "5.0.0",
     "style-loader": "^0.22.0",
     "svg-react-loader": "^0.4.5",
+    "terser": "^3.8.2",
     "turndown": "^5.0.0",
     "turndown-plugin-gfm": "^1.0.2",
     "typo-js": "^1.0.3",
-    "uglify-es": "3.3.9",
     "uniq": "^1.0.1",
     "utf-8-validate": "^5.0.1",
     "venn.js": "0.2.20",
