Add order question

--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -64,6 +64,7 @@
 		"MatchListQuestion",
 		"MultipleChoiceQuestion",
 		"NumberQuestion",
+		"OrderQuestion",
 		"RangeQuestion",
 		"SelectQuestion"
 	],
