--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -56,6 +56,7 @@
 		"DataTable",
 		"FeedbackButtons",
 		"MarkdownEditor",
+		"Sketchpad",
 		"TeX",
 		"LessonSubmit"
 	],
@@ -66,7 +67,8 @@
 		"NumberQuestion",
 		"OrderQuestion",
 		"RangeQuestion",
-		"SelectQuestion"
+		"SelectQuestion",
+		"Quiz"
 	],
 	"SURVEY": [
 		"FreeTextSurvey",
