--- a/app/editor-components/editor/components_documentation.json
+++ b/app/editor-components/editor/components_documentation.json
@@ -1850,6 +1850,12 @@
         "description": "an array of objects with `id` and `text` keys which the student has to bring into the correct ordering, which is assumed to be the supplied order"
       },
       {
+        "name": "provideFeedback",
+        "type": "boolean",
+        "description": "controls whether to show a notification displaying whether the submitted answer is correct or not",
+        "default": true
+      },
+      {
         "name": "hintPlacement",
         "type": "string",
         "description": "placement of the hints (either `top`, `left`, `right`, or `bottom`)",
@@ -2610,6 +2616,24 @@
         "type": "number",
         "description": "time between auto saves",
         "default": 30000
+      },
+      {
+        "name": "hideRecordingButtons",
+        "type": "boolean",
+        "description": "controls whether to hide the recording buttons",
+        "default": false
+      },
+      {
+        "name": "hideSaveButtons",
+        "type": "boolean",
+        "description": "controls whether to hide the save buttons",
+        "default": false
+      },
+      {
+        "name": "hideTransmitButtons",
+        "type": "boolean",
+        "description": "controls whether to hide buttons for transmitting user actions",
+        "default": false
       },
       {
         "name": "brushSize",
