--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "codecov": "^3.0.2",
     "concurrently": "^4.0.0",
     "del": "^3.0.0",
+    "doctrine": "^2.1.0",
     "electron": "2.0.9",
     "electron-packager": "12.1.1",
     "electron-rebuild": "^1.7.3",
