--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "raw-loader": "^0.5.1",
     "react": "16.5.2",
     "react-addons-shallow-compare": "^15.6.0",
-    "react-bootstrap": "^0.32.0",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-color": "^2.14.1",
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
