Allow omission of missing values when calculating statistics

--- a/package.json
+++ b/package.json
@@ -149,6 +149,13 @@
     "compute-mean": "^3.0.0",
     "compute-median": "^2.0.0",
     "compute-min": "^1.0.1",
+    "compute-nanmax": "^1.0.0",
+    "compute-nanmean": "^1.0.2",
+    "compute-nanmedian": "^1.0.1",
+    "compute-nanmin": "^1.0.0",
+    "compute-nanrange": "^1.0.0",
+    "compute-nanstdev": "^1.0.0",
+    "compute-nanvariance": "^1.0.0",
     "compute-pcorr": "^1.0.0",
     "compute-quantile": "^1.0.1",
     "compute-range": "^1.1.0",
