--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,17 @@
 {
   "presets": [
-     "es2015",
-     "react",
-     "stage-0"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
     "add-module-exports",
-    "transform-react-jsx"
+    "transform-react-jsx",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import"
   ],
   "env": {
     "development": {
-      "presets": ["react-hmre"]
+      "presets": []
     },
     "test": {
       "plugins": [
