--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "test": "jest",
     "coverage": "jest && codecov",
     "lint": "eslint app test *.js",
-    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
+    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
-    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r babel-register package.js",
+    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r @babel/register package.js",
     "package-all": "npm run package -- --all",
     "init-docs": "gitbook install",
     "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
-    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./main.development.js"
+    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./main.development.js"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
@@ -89,8 +89,6 @@
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015-loose": "^8.0.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-register": "^6.7.2",
     "codecov": "^3.0.2",
     "concurrently": "^4.0.0",
     "del": "^3.0.0",
@@ -123,20 +121,23 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@planeshifter/brace": "^0.8.0",
     "@stdlib/stdlib": "0.0.43",
     "archiver": "^3.0.0",
-    "babel-core": "6.26.3",
     "babel-jest": "^23.4.2",
-    "babel-loader": "7.1.5",
+    "babel-loader": "8.0.4",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-resolver": "^1.1.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "bl": "^2.0.0",
