--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "add-module-exports",
-    "transform-react-jsx",
+    "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import"
   ],
