--- a/package.json
+++ b/package.json
@@ -85,24 +85,18 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-eslint": "^10.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015-loose": "^8.0.0",
     "codecov": "^3.0.2",
     "concurrently": "^4.0.0",
     "del": "^3.0.0",
     "doctrine": "^2.1.0",
     "electron": "3.0.2",
     "electron-packager": "12.1.2",
-    "electron-rebuild": "^1.7.3",
     "enzyme": "3.6.0",
     "eslint": "^5.0.1",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.18.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.6.1",
-    "express": "^4.13.4",
     "gh-pages": "^2.0.0",
     "gitbook-cli": "^2.3.0",
     "happypack": "^5.0.0",
@@ -126,6 +120,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-react-constant-elements": "^7.0.0",
     "@babel/plugin-transform-react-inline-elements": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
@@ -134,11 +129,9 @@
     "archiver": "^3.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "bl": "^2.0.0",
     "bufferutil": "^4.0.0",
@@ -228,7 +221,6 @@
     "recordrtc": "^5.4.1",
     "redux": "4.0.0",
     "redux-thunk": "^2.3.0",
-    "ripemd160": "^2.0.2",
     "semver": "^5.5.0",
     "socket.io-client": "^2.1.0",
     "source-map-support": "^0.5.4",
