--- a/package.json
+++ b/package.json
@@ -127,10 +127,10 @@
     "@planeshifter/brace": "^0.8.0",
     "@stdlib/stdlib": "0.0.43",
     "archiver": "^3.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
-    "babel-plugin-resolver": "^1.1.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
     "babel-runtime": "^6.9.2",
     "bl": "^2.0.0",
@@ -232,7 +232,6 @@
     "turndown-plugin-gfm": "^1.0.2",
     "typo-js": "^1.0.3",
     "uniq": "^1.0.1",
-    "utf-8-validate": "^5.0.1",
     "venn.js": "0.2.20",
     "victory": "30.4.1",
     "webpack": "4.20.2",
