--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
     "babel-runtime": "^6.9.2",
     "bl": "^2.0.0",
@@ -209,7 +210,6 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^1.6.4",
     "react-plotly.js": "^2.2.0",
-    "react-portal": "^4.1.5",
     "react-redux": "^5.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
@@ -217,7 +217,6 @@
     "react-slick": "0.23.1",
     "react-split-pane": "0.1.84",
     "react-table": "^6.8.5",
-    "react-tools": "^0.13.3",
     "recordrtc": "^5.4.1",
     "redux": "4.0.0",
     "redux-thunk": "^2.3.0",
