--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.0",
     "react-dom": "16.5.2",
+    "react-draggable": "^3.0.5",
     "react-floater": "^0.5.4",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.14.0",
