Add missing packages

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "d3": "5.7.0",
     "d3-cloud": "1.2.5",
     "debug": "^4.0.0",
+    "deep-equal": "^1.0.1",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.4",
     "electron-window-state": "^5.0.0",
@@ -214,6 +215,7 @@
     "react-slick": "0.23.1",
     "react-split-pane": "0.1.84",
     "react-table": "^6.8.5",
+    "react-transition-group": "^2.5.0",
     "recordrtc": "^5.4.1",
     "redux": "4.0.0",
     "redux-thunk": "^2.3.0",
@@ -228,6 +230,7 @@
     "turndown-plugin-gfm": "^1.0.2",
     "typo-js": "^1.0.3",
     "uniq": "^1.0.1",
+    "uuid": "^3.3.2",
     "venn.js": "0.2.20",
     "victory": "30.5.0",
     "webpack": "4.20.2",
